Добавил возможность консольного интерфейса